samples/_failures_safe/1761436820_8ddad0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6156f0bc.c: In function ‘main’:
./samples/SAFE/__tmp_6156f0bc.c:145:16: error: missing terminating " character
  145 |         printf("2. Multiply
      |                ^~~~~~~~~~~~
./samples/SAFE/__tmp_6156f0bc.c:145:9: error: expected expression at end of input
  145 |         printf("2. Multiply
      |         ^~~~~~
./samples/SAFE/__tmp_6156f0bc.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6156f0bc.c:145:9: error: expected declaration or statement at end of input
